good, can be used in coursework