@@ -2,100 +2,154 @@ package com.webbrowser.webbrowser.browser.rendering;
 
 import com.webbrowser.webbrowser.browser.rendering.dom.Document;
 import com.webbrowser.webbrowser.browser.rendering.dom.Element;
+import com.webbrowser.webbrowser.browser.rendering.dom.TextNode;
 
-import java.util.Set;
+import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 public class HtmlParser {
+    // Список тегів, які не мають закриваючої частини
+    private static final Set<String> VOID_TAGS = Set.of(
+            "br", "img", "hr", "meta", "link", "input", "source", "track", "wbr",
+            "area", "base", "col", "embed", "param"
+    );
 
-    private static final Set<String> VOID_ELEMENTS = Set.of("area", "base", "br", "col", "embed", "hr", "img", "input", "link", "meta", "param", "source", "track", "wbr");
-
-    private static final Pattern TAG_PATTERN = Pattern.compile("<(\\/?)([a-zA-Z0-9]+)([^>]*)>");
-    private static final Pattern ATTR_PATTERN = Pattern.compile("([a-zA-Z0-9\\-]+)=\"([^\"]*)\"");
+    private static final Pattern TAG_PATTERN = Pattern.compile("<(/?)([a-zA-Z0-9\\-]+)([^>]*)>");
+    private static final Pattern ATTR_PATTERN = Pattern.compile("([a-zA-Z0-9\\-]+)=\\\"([^\\\"]*)\\\"");
 
     public Document parse(String html) {
-        int bodyStart = html.indexOf("<body>");
-        int bodyEnd = html.lastIndexOf("</body>");
+        // 1. ОЧИЩЕННЯ: Видаляємо сміття, яке ламає рендер
+        String cleanHtml = preprocessHtml(html);
 
-        Element body = new Element("body");
-        Document doc = new Document(body);
-        int titleStart = html.indexOf("<title>");
-        int titleEnd = html.indexOf("</title>");
-        if (titleStart != -1 && titleEnd != -1) {
-            doc.setTitle(html.substring(titleStart + 7, titleEnd));
-        }
-
-        if (bodyStart != -1 && bodyEnd != -1) {
-            String bodyContent = html.substring(bodyStart + 6, bodyEnd);
-            parseContent(body, bodyContent);
-        } else {
-        }
+        Element root = new Element("html");
+        Document doc = new Document(root);
+        List<Token> tokens = tokenize(cleanHtml);
+        parseTokens(tokens, root, doc);
         return doc;
     }
 
-    private void parseContent(Element parent, String content) {
-        Matcher matcher = TAG_PATTERN.matcher(content);
-        int lastEnd = 0;
+    /**
+     * Видаляє коментарі, скрипти, стилі та DOCTYPE.
+     */
+    private String preprocessHtml(String html) {
+        // Видаляємо DOCTYPE
+        html = html.replaceAll("<!(?i)DOCTYPE[^>]*>", "");
 
-        while (matcher.find()) {
-            String fullMatch = matcher.group(0);
-            String closingSlash = matcher.group(1);
-            String tagName = matcher.group(2).toLowerCase();
-            String attrsString = matcher.group(3).trim();
-            int tagStart = matcher.start();
-            int tagEnd = matcher.end();
+        // Видаляємо коментарі html = html.replaceAll("", "");
 
-            String text = content.substring(lastEnd, tagStart);
-            if (!text.trim().isEmpty()) {
-                parent.setOwnText(parent.ownText() + text);
-            }
+        // Видаляємо вміст <script>...</script> та <style>...</style>
+        html = html.replaceAll("(?i)<script[\\s\\S]*?</script>", "");
+        html = html.replaceAll("(?i)<style[\\s\\S]*?</style>", "");
 
-            if (closingSlash.isEmpty()) {
-                Element newElement = new Element(tagName);
+        return html;
+    }
 
-                parseAttributes(newElement, attrsString);
+    private static class Token {
+        enum Type { OPEN, CLOSE, TEXT, VOID }
+        Type type;
+        String name;
+        String attrs;
+        String text;
+    }
 
-                if (VOID_ELEMENTS.contains(tagName)) {
-                    parent.addChild(newElement);
-                    lastEnd = tagEnd;
-                    continue;
-                }
-
-                String closingTag = "</" + tagName + ">";
-                int contentEnd = findClosingTag(content, tagEnd, closingTag);
-
-                if (contentEnd != -1) {
-                    String subContent = content.substring(tagEnd, contentEnd);
-
-                    parseContent(newElement, subContent);
-                    parent.addChild(newElement);
-
-                    lastEnd = contentEnd + closingTag.length();
-                    matcher.region(lastEnd, content.length());
-                    continue;
+    private List<Token> tokenize(String html) {
+        List<Token> tokens = new ArrayList<>();
+        Matcher m = TAG_PATTERN.matcher(html);
+        int last = 0;
+        while (m.find()) {
+            if (m.start() > last) {
+                String text = html.substring(last, m.start());
+                if (!text.isBlank()) {
+                    Token t = new Token();
+                    t.type = Token.Type.TEXT;
+                    t.text = text;
+                    tokens.add(t);
                 }
             }
-            lastEnd = tagEnd;
+            String slash = m.group(1);
+            String name = m.group(2).toLowerCase();
+            String attrs = m.group(3);
+            Token t = new Token();
+
+            if (!slash.isEmpty()) {
+                t.type = Token.Type.CLOSE;
+                t.name = name;
+            } else if (VOID_TAGS.contains(name)) {
+                t.type = Token.Type.VOID;
+                t.name = name;
+                t.attrs = attrs;
+            } else {
+                t.type = Token.Type.OPEN;
+                t.name = name;
+                t.attrs = attrs;
+            }
+            tokens.add(t);
+            last = m.end();
         }
+        // Додаємо залишок тексту після останнього тегу
+        if (last < html.length()) {
+            String remainder = html.substring(last);
+            if (!remainder.isBlank()) {
+                Token t = new Token();
+                t.type = Token.Type.TEXT;
+                t.text = remainder;
+                tokens.add(t);
+            }
+        }
+        return tokens;
+    }
 
-        String remainingText = content.substring(lastEnd);
-        if (!remainingText.trim().isEmpty()) {
-            parent.setOwnText(parent.ownText() + remainingText);
+    private void parseTokens(List<Token> tokens, Element root, Document doc) {
+        Deque<Element> stack = new ArrayDeque<>();
+        stack.push(root);
+
+        for (Token t : tokens) {
+            switch (t.type) {
+                case TEXT -> {
+                    // Нормалізація: перетворюємо переноси рядків на пробіли
+                    String cleanText = t.text.replaceAll("\\s+", " ");
+                    if (!cleanText.isBlank()) {
+                        stack.peek().addChild(new TextNode(cleanText));
+                    }
+                }
+                case VOID -> {
+                    Element e = new Element(t.name);
+                    parseAttributes(e, t.attrs);
+                    stack.peek().addChild(e);
+                }
+                case OPEN -> {
+                    Element e = new Element(t.name);
+                    parseAttributes(e, t.attrs);
+                    stack.peek().addChild(e);
+                    // meta та link не кладемо в стек, щоб не плутати вкладеність
+                    if (!t.name.equals("link") && !t.name.equals("meta")) {
+                        stack.push(e);
+                    }
+                }
+                case CLOSE -> {
+                    String closing = t.name;
+                    if (closing.equals("title") && !stack.isEmpty() && stack.peek().tagName().equals("title")) {
+                        doc.setTitle(stack.peek().text());
+                        stack.pop();
+                        continue;
+                    }
+
+                    // Захист від неправильної вкладеності (закриваємо теги, поки не знайдемо пару)
+                    if (stack.stream().anyMatch(e -> e.tagName().equals(closing))) {
+                        while (!stack.isEmpty() && !stack.peek().tagName().equals(closing)) {
+                            stack.pop();
+                        }
+                        if (!stack.isEmpty()) stack.pop();
+                    }
+                }
+            }
         }
     }
 
-    private int findClosingTag(String content, int start, String closingTag) {
-        int index = content.indexOf(closingTag, start);
-        return index;
-    }
-
-    private void parseAttributes(Element element, String attrsString) {
-        Matcher attrMatcher = ATTR_PATTERN.matcher(attrsString);
-        while(attrMatcher.find()) {
-            String key = attrMatcher.group(1);
-            String value = attrMatcher.group(2);
-            element.attributes().put(key, value);
-        }
+    private void parseAttributes(Element e, String attrs) {
+        if (attrs == null) return;
+        Matcher m = ATTR_PATTERN.matcher(attrs);
+        while (m.find()) e.attributes().put(m.group(1), m.group(2));
     }
 }
